# rrr-replication

./: .gitattributes  .gitignore  README.md  REPLICATION_MANIFEST.json  bibliography.bib  metadata_reference.csv  pyproject.toml  requirements.txt
.agents/plugins/: marketplace.json
docs/: before_running.md  external_comparisons.md  product_installation.md  replication.md  runpod_replay.md  writer_correction_replay.md
plugins/rrr/.codex-plugin/: plugin.json
plugins/rrr/runtime/: rrr_poc-15.17.0-py3-none-any.whl
plugins/rrr/scripts/: bootstrap_rrr.py
results/: README.md
results/corrected/: README.md  manifest.json
results/corrected/analysis_source/: README.md  artifact_impact.csv  condition_changes.csv  core_document_changes.csv  guardrail_changes.csv  manifest.json  model_outcome_changes.csv  overall_writer_changes.csv  paired_writer_runs.csv  running_example_changes.csv  source_accumulation_changes.csv  source_inclusion_changes.csv  stability_distribution_changes.csv  validation.json  writer_contract_changes.csv
results/corrected/tables/: F5_local_model_outcomes.csv  F5_local_model_outcomes.tex  F_document_inclusion_by_prompt.csv  F_document_inclusion_by_prompt.tex  T0_controlled_contract_staircase.csv  T0_controlled_contract_staircase.tex  T1_main_integrity.csv  T1_main_integrity.tex  T2_conditions.csv  T2_conditions.tex  T3_citation_taxonomy_detail.csv  T4_guardrail_activation.csv  T4_guardrail_activation.tex  T5_refusal_calibration.csv  T5_refusal_calibration.tex  TS_corpus_size.csv  TS_corpus_size.tex  T_body_only_word_counts.csv  T_body_only_word_counts.tex  (+12 more)
runs/phase_a_main/: phase_a_results.json
runs/phase_b_rag_only/: phase_b_results.json
runs/phase_c_unrestricted/: phase_c_results.json
runs/phase_d1_high_threshold/: phase_d1_results.json
runs/phase_d2_narrow_prompt/: phase_d2_results.json
runs/phase_e_e2_anatomy/: phase_e_results.json
runs/phase_f1_adversarial_irrelevant/: phase_f1_results.json
runs/phase_f2_adversarial_culture/: phase_f2_results.json
scripts/: aggregate_comprehensive.py  apply_bypass_patch.py  audit_corrected_writer_replay.py  build_corpus_text.py  build_corrected_paper_artifacts.py  build_product_distribution.py  check_citations.py  clean_page_text.py  detect_page_offsets.py  enrich_metadata.py  eval_ingest.py  pod_prepare_corrected_writer_replay.sh  pod_pull_models.sh  pod_run_corrected_writer_profile.sh  pod_session_bootstrap.sh  pod_start_dual_ollama.sh  preprocess.sh  rag_baseline.py  rescore_paper_outputs.py  run_battery.sh  run_claude_code_arm.sh  run_claude_skill_arm.sh  run_comprehensive_battery.sh  run_corrected_writer_replay.py  run_small_validation.py  runpod_exec.py  score_claude_arm.py  smoke_gibberish.sh  t3_unrestricted.py  verify_replication.py
skills/rrr/: SKILL.md
src/rrr/: api_backend.py  cli.py  e4_validate.py  evidence_filter.py  host_backend.py  index.py  ingest.py  language.py  llm.py  manifest.py  metrics.py  outline.py  paths.py  preprocess.py  product_workspace.py  query_planner.py  reasoner.py  render.py  retrieve.py  schemas.py  stance.py  text.py  utils.py  validate.py  writer.py
tests/: README.md
tests/unit/: test_api_backend.py  test_check_citations.py  test_host_backend.py  test_product_workspace.py  test_render_grouped_citations.py  test_rescore_paper_outputs.py  test_skill_packaging.py  test_writer_evidence_contract.py
(+960 files in other folders)
