[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rrr-poc"
version = "15.19.0"
description = "Retrieval-Restricted Reasoning, a literature-review pipeline that reasons only over retrieved, page-anchored evidence."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [{ name = "Igor B. Martins" }]
keywords = ["retrieval", "rag", "literature-review", "economic-history", "llm"]

# Runtime deps. The `ollama` client is required in every runtime because the
# central shim preserves the ollama.chat call contract. The Ollama server is
# needed only for local inference. langdetect powers multilingual routing;
# anthropic/openai are optional extras pulled in by the `api` extra below.
dependencies = [
    "pymupdf>=1.28.0",
    "rank_bm25>=0.2.2",
    "pandas>=2.1",
    "numpy>=1.26",
    "rapidfuzz>=3.9.7",
    "ollama>=0.1.0",
    "pybtex>=0.24.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
# `pip install rrr-poc[api]` for the provider API runtime.
api = ["anthropic>=0.40.0", "openai>=2.44.0"]
# `pip install rrr-poc[pod]` adds the RunPod remote-exec helper.
pod = ["paramiko>=3.5.0"]
# Everything.
all = ["anthropic>=0.40.0", "openai>=2.44.0", "paramiko>=3.5.0"]

[project.scripts]
# One-command CLI: `rrr t2 --metadata metadata.csv --topic "..."`
rrr = "rrr.cli:main"

[project.urls]
Homepage = "https://github.com/igbaccin/rrr-poc"
Repository = "https://github.com/igbaccin/rrr-poc"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["rrr*"]
